--- a/index.html
+++ b/index.html
@@ -3,8 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            min-height: 100%;
+            width: 100%;
+        }
+
+        .portfolio {
+            display: grid;
+            grid-template-rows: 1fr 1fr 1fr;
+            grid-template-columns: 1fr 1fr 1fr;
+            row-gap: 10px;
+            min-width: 100%;
+            background-color: #F7F7F7;
+        }
+
+        .text {
+            grid-column: 1/4;
+            grid-row: 1;
+            text-align: center;
+            color: #858686;
+        }
+
+        .header-text {
+            font-size: 37px;
+            letter-spacing: 5px;
+            padding: 120px 0 30px;
+            text-transform: uppercase;
+            font-weight: 300;
+            font-family: 'Open Sans', sans-serif;
+            line-height: 1.4;
+        }
+
+        .text-hr {
+            width: 100px;
+            border: 1px solid #4CDDF3;
+            margin-bottom: 50px;
+        }
+
+        .sub-text {
+            font-size: 17px;
+            font-family: 'Open Sans', sans-serif;
+            width: 680px;
+            margin: 50px auto;
+        }
+
+        .next-featured {
+            grid-column: 2;
+            grid-row: 2;
+        }
+
+        .prev {
+            cursor: pointer;
+            float: left;
+            background: url("images/f-prev.png") no-repeat #e1e1e1;
+            width: 30px;
+            height: 57px;
+            margin-left: 110px;
+        }
+
+
+        .go-portfolio {
+            color: #fff;
+            margin-top: 4px;
+            font-size: 14px;
+            text-transform: uppercase;
+            font-weight: 400;
+            text-align: center;
+            font-family: 'Open Sans', sans-serif;
+            background: #4cddf3;
+            border-radius: 25px;
+            padding: 13px 25px 13px;
+            letter-spacing: 1px;
+            transition: all 0.1s ease-in-out;
+            border: none;
+            outline: none;
+        }
+
+        .next {
+            cursor: pointer;
+            float: right;
+            background: url("images/f-next.png") no-repeat #e1e1e1;
+            width: 30px;
+            height: 57px;
+            margin-left: 110px;
+        }
+
+        .next:hover, .prev:hover {
+            background-color: #4CDDF3;
+        }
+
+    </style>
 </head>
 <body>
-xxxxx
+
+<section class="portfolio">
+    <div class="text">
+        <div class="header-text">FEATURED WORKS</div>
+        <hr class="text-hr">
+        <span class="sub-text">
+        Visuals work in every language. We communicate in images where words fail to transmit our message. Keep it simple.
+        </span>
+    </div>
+    <div class="next-featured">
+        <div class="prev">
+        </div>
+        <button class="go-portfolio">
+            GO PORTFOLIO
+        </button>
+        <div class="next">
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
