--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             transition: all 0.1s ease-in-out;
             border: none;
             outline: none;
+            margin-left: 50px;
         }
 
         .next {
