header and animation

--- a/test.html
+++ b/test.html
@@ -94,7 +94,7 @@
     };
 
     const header = document.getElementById("myHeader");
-    const sticky = header.offsetTop;
+    var sticky = header.offsetTop;
 
     function myFunction() {
         if (window.pageYOffset > sticky) {
