--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         #home {
             height: 100vh;
-            background-color: red;
+            background: red;
         }
 
         #about {
@@ -121,12 +121,14 @@
         .header a {
             color: black;
         }
+
     </style>
 </head>
 <body>
-<div id="home"></div>
-<div class="header" id="myHeader">
+<div id="home">
 
+</div>
+<div class="header" id="myHeader">
     <div class="total-logo">
         <div class="logo">
             <div class="inner-logo">
@@ -156,8 +158,8 @@
         myFunction()
     };
 
-    var header = document.getElementById("myHeader");
-    var sticky = header.offsetTop;
+    const header = document.getElementById("myHeader");
+    const sticky = header.offsetTop;
 
     function myFunction() {
         if (window.pageYOffset > sticky) {
