--- a/slider-example.html
+++ b/slider-example.html
@@ -13,7 +13,7 @@
             height: 500px;
         }
 
-        #slider {
+        #home {
             width: 1000px;
             height: 500px;
             margin: 20px auto;
@@ -41,10 +41,18 @@
             border-radius: 0 10px;
         }
 
+        .fade {
+            animation-duration: 1s;
+            animation-timing-function: ease;
+            animation-delay: 0s;
+            animation-iteration-count: 1;
+            animation-direction: normal;
+            animation-fill-mode: forwards;
+        }
     </style>
 </head>
 <body>
-<div id="slider">
+<div id="home">
     <div id="box">
         <img src="images/a.jpg" alt="test">
     </div>
