--- a/animation part.html
+++ b/animation part.html
@@ -27,19 +27,28 @@
             opacity: 0;
 
         }
+
+        .invisible {
+            position: absolute;
+            top: 30%;
+            left: 30%;
+            animation-duration: 3s;
+            font-size: 84px;
+            animation-delay: 0ms;
+        }
     </style>
 </head>
 <body>
     <p id="p1" class="animation invisible">
-        xxx xxx xxx
+        WE ARE SMART
     </p>
 
     <p id="p2" class="invisible">
-        yyy yyy yyy
+        WE ARE FRESH
     </p>
 
     <p id="p3" class="invisible">
-        zzz zzz zzz
+        WE ARE SOLIDO
     </p>
     <script>
         const p1 = document.getElementById("p1");
